chore: add markdown for logistic regression

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -1884,6 +1884,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `Logistic Regression`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
