--- a/breastCancer_allModels.ipynb
+++ b/breastCancer_allModels.ipynb
@@ -1659,7 +1659,7 @@
     "\n",
     "We are interested in finding out which variables are best for predicting whether the breast cancer is benign or malignant. \n",
     "\n",
-    "Half of the columns seem to exhibit a positive skew. However, this only provides us with an early sensing as to which variables might be more suitable for prediction. We cannot choose our variables based on this information yet. In order to arrrive at a more convincing answer, we have to dive deeper by examining the swarm plots in conjuction with the box plots for each variable. "
+    "Half of the columns seem to exhibit a positive skew. However, this only provides us with an early sensing as to which variables might be more suitable for prediction. We cannot choose our variables based on this information yet. In order to arrive at a more convincing answer, we have to dive deeper by examining the swarm plots in conjuction with the box plots for each variable. "
    ]
   },
   {
