feat: add markdowns

--- a/breastCancer_allModels.ipynb
+++ b/breastCancer_allModels.ipynb
@@ -21,6 +21,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `Breast Cancer Wisconsin (Diagnostic) Data Set`\n",
+    "\n",
+    "This dataset is obtained from Kaggle. Features are computed from a digitized image of a fine needle aspirate (FNA) of a breast mass. They describe characteristics of the cell nuclei present in the image.\n",
+    "\n",
+    "For an overview of the columns, please kindly refer to `data_description.txt` for more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"dataset-cover.jpeg\" width=\"1000\" height=\"400\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -742,6 +760,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Drop unneeded column`\n",
+    "\n",
+    "This column has inconsistent data formatting and serves no purpose for our project."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1139,6 +1166,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Choosing between 3 sets of predictors`\n",
+    "\n",
+    "The 30 predictor columns are split into 3 rather identical sets of 10 columns.\n",
+    "These 3 sets are labelled 'mean', 'standard', and 'worst'. \n",
+    "\n",
+    "We decided to choose the 'mean' set for this project as we feel it might best represent the 'average case'. Thus, we extract only the 10 predictor columns under the 'mean' category."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1412,6 +1451,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# `Exploratory Data Analysis`\n",
+    "\n",
+    "Here, we wish to gain a better understanding of the dataset through EDA. We will also perform Data Cleaning and Feature Selection to obtain the best 5 predictive features to be used in our Machine Learning models later on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## `Data Visualisation`\n",
     "\n",
     "Before we perform data cleaning, let us visualise the dataset to gain a better understanding of what we are working with.\n",
@@ -1510,6 +1558,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Outlier Removal`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1573,6 +1628,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Verifying the resutls of the outlier removal`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1609,7 +1671,9 @@
    "source": [
     "### `Further visualisation: Histograms`\n",
     "\n",
-    "Histograms allow us to better understand the distribution and skewness of data. Skewness can lead to inaccuracies in statistical models, especially regression-based ones since the tail region may act as an outlier for the model. "
+    "Histograms allow us to better understand the distribution and skewness of data. Skewness can lead to inaccuracies in statistical models, especially regression-based ones since the tail region may act as an outlier for the model. \n",
+    "\n",
+    "Let us have a deeper look at which features exhibit a greater degree of skew."
    ]
   },
   {
@@ -1643,7 +1707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "### `Analysis of Skew`\n",
     "\n",
     "From the histograms, we see that some columns are skewed.\n",
     "\n",
@@ -1657,9 +1721,18 @@
     "Negative skew:\n",
     "nil\n",
     "\n",
-    "We are interested in finding out which variables are best for predicting whether the breast cancer is benign or malignant. \n",
+    "**We are interested in finding out which variables are best for predicting whether the breast cancer is benign or malignant.**\n",
     "\n",
-    "Half of the columns seem to exhibit a positive skew. However, this only provides us with an early sensing as to which variables might be more suitable for prediction. We cannot choose our variables based on this information yet. In order to arrive at a more convincing answer, we have to dive deeper by examining the swarm plots in conjuction with the box plots for each variable. "
+    "Half of the columns seem to exhibit a positive skew. However, this only provides us with an early sensing as to which variables might be more suitable for prediction. We cannot choose our variables based on this information yet. In order to arrive at a more convincing answer, we have to dive deeper by examining the swarm plots in conjuction with the box plots for each variable. \n",
+    "\n",
+    "`UP NEXT: A deeper look into feature selection through swarm plots and ANOVA Hypothesis Test`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Splitting the dataset into the train and test sets`"
    ]
   },
   {
@@ -1695,6 +1768,8 @@
     }
    ],
    "source": [
+    "\"\"\" SWARM PLOTS FOR EACH OF THE 10 FEATURES \"\"\"\n",
+    "\n",
     "f, axes = plt.subplots(10, 1, figsize=(24, 48))\n",
     "\n",
     "\n",
@@ -1733,6 +1808,32 @@
     "for i in range(0,10):\n",
     "    sb.move_legend(axes[i], \"right\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Swarm Plot Analysis`\n",
+    "\n",
+    "We select the better features for model prediction by prioritizing a **low** degree of overlap between the Benign and Malignant box plots. \n",
+    "\n",
+    "Looking at the swarm plots, we have our initial top 5 features that exhibit the lowest degrees of overlap between the Benign and Malignant box plots. They are:\n",
+    "\n",
+    "- Radius Mean\n",
+    "- Concavity Mean\n",
+    "- Concave Points Mean\n",
+    "- Perimeter Mean\n",
+    "- Area Mean\n",
+    "\n",
+    "However, if you are like us, you will not be entirely satisfied with this selection yet. Surely, more can be done to further verify if these features are indeed the most suitable ones for our project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `ANOVA HYPOTHESIS TEST` "
    ]
   },
   {
@@ -1868,12 +1969,13 @@
     "\n",
     "This is also congruent with a visual confirmation of the swarmplots as plotted above. For example, in the swarm plot for concave points_mean, we see that for a MALIGNANT and a BENIGN tumour, the datapoints are rather distinct, with the box plots being quite far away from each other. On the other hand, for fractal_dimension_mean, we see that the boxplots for MALIGNANT and BENIGN are almost on top of one another. The P-value of 0.5614 confirms this, as we accept the null hypothesis that fractal_dimension_mean is not correlated to the diagnosis of MALIGNANT or BENIGN.\n",
     "\n",
+    "\n",
     "The top 5 features:\n",
-    "(1) concave points_mean\n",
-    "(2) concavity_mean\n",
-    "(3) area_mean\n",
-    "(4) perimeter_mean\n",
-    "(5) radius_mean"
+    "- `concave points_mean`\n",
+    "- `concavity_mean`\n",
+    "- `area_mean`\n",
+    "- `perimeter_mean`\n",
+    "- `radius_mean`\n"
    ]
   },
   {
@@ -1895,7 +1997,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `SVC With Grid`"
+    "# `Machine Learning`\n",
+    "\n",
+    "Now that we have selected the top 5 features and performed Data Cleaning, let us run the dataset through a series of Machine Learning models and identify which one leads to the highest prediction accuracy.\n",
+    "\n",
+    "In total, we have selected **4** models:\n",
+    "- Decision Tree Classifier\n",
+    "- Logistic Regression\n",
+    "- Random Forest\n",
+    "- Support Vector Machine with Grid Search \n",
+    "\n",
+    "\n",
+    "\n",
+    "`Rationale for model selections`\n",
+    "\n",
+    "Dataset Types\n",
+    "- Our dataset comprised predominantly continuous variables, and our goal was to predict a categorical variable.\n",
+    "\n",
+    "Interpretability\n",
+    "- Because the model is meant to be used in a medical context, it is important for the model to be interpretable.\n",
+    "\n",
+    "Performance\n",
+    "- The model needed to perform well on metrics which were used for validation in the healthcare industry.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `Model 1: SVC With Grid`\n",
+    "\n",
+    "Support Vector Machine (SVM) is a supervised machine learning technique which are good for classification problems with small dataset sizes.\n",
+    "\n",
+    "- Non-Linearity: SVM is good with dealing with non-linear data as a result of their inbuilt kernels (polynomial, rbf, sigmoid etc.)\n",
+    "\n",
+    "- Hyperparameters: SVM has a few hyperparameters, making it easier to tune. \n",
+    "\n",
+    "- Grid Search: Computationally inexpensive in SVM implementation due to the few hyperparameters. \n"
    ]
   },
   {
@@ -1978,7 +2116,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Random Forest`"
+    "## `Model 2: Random Forest`\n",
+    "\n",
+    "An ensemble learning technique which combines multiple decision trees to create a more accurate and robust model.\n",
+    "\n",
+    "- Improved Accuracy compared to a single decision tree.\n",
+    "\n",
+    "- Resilience to Overfitting: Random Feature selection of 400-1200 decision trees make Random Forest less prone to overfitting.\n"
    ]
   },
   {
@@ -2059,7 +2203,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Logistic Regression`"
+    "## `Model 3: Logistic Regression`\n",
+    "\n",
+    "Logistic regression is a statistical method used for binary classification, where the goal is to predict the probability of an input instance belonging to one of two classes.\n",
+    "\n",
+    "- Simplicity: Logistic Regression models are easily implementable and highly interpretable.\n",
+    "\n",
+    "- Versatility: Able to be used for a wide range of binary classification tasks\n",
+    "\n"
    ]
   },
   {
@@ -2211,7 +2362,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Multi-Variate Classification Tree`"
+    "## `Model 4: Multi-Variate Classification Tree`\n",
+    "\n",
+    "A graphical representation of decision-making processes or decision rules that can be used to predict outcomes based on input features of variables.\n",
+    "\n",
+    "- Automatic Feature Selection: Decision Trees can automatically select important variables from the input data. \n",
+    "\n",
+    "- Interpretability: Decision Trees are highly interpretable, giving them an advantage in the healthcare setting.\n",
+    "\n",
+    "- Ease of use: Decision Trees are easy to implement, and \n",
+    "      do not require complex calculations or intensive\n",
+    "      computational resources.\n",
+    "\n",
+    "\n",
+    "Here, we decided to explore both a model with Tree Height 2 and a model with Tree Height 4, to determine which one leads to a higher classification accuracy."
    ]
   },
   {
@@ -2461,11 +2625,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `End of Machine Learning Section`\n",
+    "\n",
+    "Now that we have run our dataset through the 4 models, we have our results printed above. Now, how do we make sense of these results? The next section will analyze our data-driven insights and come to a conclusion as to the best performing model."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Receiver Operator Curve` "
+    "# `Data-Driven Insights: Receiver Operator Curve` \n",
+    "\n",
+    "We decided not to simply make a judgement based on the classification accuracy alone. We used a ROC curve to make a more informed judgement that better conforms to the standards set by clinicians in clinical trials. We are after all analyzing data in the healthcare sector.\n",
+    "\n",
+    "An ROC curve (receiver operating characteristic curve) is a graph showing the performance of a classification model at all classification thresholds. \n",
+    "\n",
+    "\n",
+    "`Metrics`\n",
+    "\n",
+    "TPR = FPR : Random Classifier\n",
+    "\n",
+    "FPR = 0, TPR = 1 : Perfect Classifier\n",
+    "\n",
+    "\n"
    ]
   },
   {
