chore: edit ROC description

--- a/breastCancer_allModels.ipynb
+++ b/breastCancer_allModels.ipynb
@@ -2656,20 +2656,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `Data-Driven Insights: Receiver Operator Curve` \n",
+    "# `Data-Driven Insights` \n",
     "\n",
-    "We decided not to simply make a judgement based on the classification accuracy alone. We used a ROC curve to make a more informed judgement that better conforms to the standards set by clinicians in clinical trials. We are after all analyzing data in the healthcare sector.\n",
+    "We decided not to simply make a judgement based on the classification accuracy alone. In total, we settled on a total of 3 metrics for a more holistic assessment. They are:\n",
     "\n",
-    "An ROC curve (receiver operating characteristic curve) is a graph showing the performance of a classification model at all classification thresholds. \n",
+    "### 1. Classification Accuracy\n",
+    "- Defined a the total true positives, plus the total true negatives, over the entire dataset size\n",
+    "- Already printed above for each model\n",
+    "\n",
+    "### 2. Area Under Curve for ROC Curve\n",
+    "- We used a ROC curve to make a more informed judgement that better conforms to the standards set by clinicians in clinical trials. We are after all analyzing data in the healthcare sector\n",
+    "- An ROC curve (receiver operating characteristic curve) is a graph showing the performance of a classification model at all classification thresholds\n",
+    "- We will plot the curve below and analyze its results\n",
+    "\n",
+    "    `Metrics`\n",
+    "\n",
+    "    TPR = FPR : Random Classifier\n",
+    "\n",
+    "    FPR = 0, TPR = 1 : Perfect Classifier\n",
+    "\n",
+    "### 3. f1-score\n",
+    "- Defined as the harmonic mean of precision and recall. It has some advantages over the classification accuracy metric as it is designed to work well on imbalanced data, which is characteristic of our chosen dataset\n",
+    "- Already printed above for each model\n",
     "\n",
     "\n",
-    "`Metrics`\n",
-    "\n",
-    "TPR = FPR : Random Classifier\n",
-    "\n",
-    "FPR = 0, TPR = 1 : Perfect Classifier\n",
-    "\n",
+    "Since number 1 and 3 are already done above, we only need to plot the ROC curve before we arrive at a conclusion. \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Receiver Operating Characteristic curve`\n",
+    "\n",
+    "The colored lines in this graph show how the models perform on the breast cancer dataset, with the most important metric being the area under curve"
    ]
   },
   {
@@ -2757,7 +2778,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `Tablulated Results`"
+    "### `Tablulated Results`\n",
+    "\n",
+    "The table below summarizes the results of each of the 3 chosen metrics on each of the models."
    ]
   },
   {
